v1. add getUwStateOfCustomer of Employee UW function